マークの色・カーソル調整

--- a/style.css
+++ b/style.css
@@ -31,3 +31,10 @@ body {
 .account_name {
   color: gray;
 }
+
+.status_action span {
+  color: red;
+}
+.status_action span:hover {
+  cursor: pointer;
+}
