--- a/style.css
+++ b/style.css
@@ -38,3 +38,20 @@ body {
 .status_action span:hover {
   cursor: pointer;
 }
+
+.tweet_textarea {
+  font-size: 1em;
+  width: 100%;
+  height: 5em;
+  padding: 0.8em;
+  resize: vertical;
+}
+
+.send_tweet {
+  font-size: 1em;
+  padding: 0.5em 1em;
+}
+
+.tweet_input {
+  margin-bottom: 0.5em;
+}
